<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:background="@drawable/rounded_cornor"
            android:gravity="center">

            <TextView
                android:id="@+id/txtQuestionNo"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/round_circle"
                android:gravity="center"
                android:text="@string/zero"
                android:textColor="@color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:text="@string/guess_countries"
            android:textColor="@color/black"
            android:textSize="@dimen/margin_15sp"
            android:textStyle="normal" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_10dp"
            android:layout_weight="1.3"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="@dimen/margin_10dp">

            <ImageView
                android:id="@+id/img_flag"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/martinique" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_option_one"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/rounded_corner_border"
                        android:gravity="center"
                        android:padding="6dp"
                        android:text="countrcccccccccccccccccccccccccccy"
                        android:textColor="@color/txt_grey_light"
                        android:textSize="15sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/txt_correct_wrong_option_one"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/correct"
                        android:layout_marginTop="3dp"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        android:visibility="invisible"
                        android:textStyle="normal" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/txt_option_two"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/rounded_corner_border"
                        android:gravity="center"
                        android:padding="6dp"
                        android:text="country"
                        android:textColor="@color/txt_grey_light"
                        android:textSize="15sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/txt_correct_wrong_option_two"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/correct"
                        android:layout_marginTop="3dp"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        android:visibility="invisible"
                        android:textStyle="normal" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/txt_option_three"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/rounded_corner_border"
                        android:gravity="center"
                        android:padding="6dp"
                        android:text="countryccccccccccccccccccccccccccccccccccccccc"
                        android:textColor="@color/txt_grey_light"
                        android:textSize="15sp"
                        android:textStyle="normal" />
                    <TextView
                        android:id="@+id/txt_correct_wrong_option_three"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/correct"
                        android:layout_marginTop="3dp"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        android:visibility="invisible"
                        android:textStyle="normal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/txt_option_four"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/rounded_corner_border"
                        android:gravity="center"
                        android:padding="6dp"
                        android:text="country"
                        android:textColor="@color/txt_grey_light"
                        android:textSize="15sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/txt_correct_wrong_option_four"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/correct"
                        android:layout_marginTop="3dp"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        android:visibility="invisible"
                        android:textStyle="normal" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>